--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
           </div>
     </section>
     <section>
+        <div class="w-10/12 mx-auto p-3 rounded-lg shadow-md bg-gray-50">
+            <h2 class="text-2xl font-bold">
+                About Simon Sites
+            </h2>
+            <p class="pt-4 text-gray-600 text-base">
+                At SimonSites, we specialize in crafting beautiful, high-performance websites that align perfectly with your brand’s identity. With years of experience in front-end development, we’re committed to delivering exceptional results that exceed expectations. Our passion for web development drives us to stay ahead of the curve, ensuring your site is not only visually appealing but also secure, scalable, and optimized for performance. 
+            </p>
 
+        </div>
     </section>
 </body>
 </html>
