--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
                   <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Our Services</h1>
                   <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">At SimonSites, we specialize in crafting custom websites tailored to your specific business needs. We believe that every brand is unique, so we work closely with you to create a website that reflects your identity and values. Our affordable services ensure that you get a high-quality, professional website without breaking the bank.</p>
                   <div class="mt-6 flex items-center justify-center gap-x-6">
-                    <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-base font-semibold text-white shadow-sm hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Get in Touch</a>
+                    <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-base font-semibold text-white shadow-md hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Get in Touch</a>
                     
                   </div>
                 </div>
@@ -68,9 +68,9 @@
     <!-- WHAT WE OFFER -->
     <section class="pb-12 pt-4">
         <div class="px-6 grid grid-cols-1 2xl:px-24 items-center">
-            <div class="bg-gray-50 fadeup rounded-lg shadow-sm p-4 md:w-2/3 mx-auto 2xl:w-fit 2xl:px-12">
+            <div class="bg-gray-50 fadeup rounded-lg shadow-md p-4 md:w-2/3 mx-auto 2xl:w-fit 2xl:px-12">
                 <h2 class=" text-2xl font-bold py-4 lg:text-3xl 2xl:text-4xl 2xl:text-center">What We Offer</h2>
-                <ul class="list-disc 2xl:list-none marker:text-gray-900 ml-4 space-y-2 2xl:mx-auto 2xl:w-fit text-gray-600">
+                <ul class="list-disc 2xl:list-none marker:text-gray-900 ml-6 space-y-2 2xl:mx-auto 2xl:w-fit text-gray-600">
                     <li class="2xl:text-center">Personalized designs that match your brand</li>
                     <li class="2xl:text-center">Easy-to-navigate layouts for a seamless user experience</li>
                     <li class="2xl:text-center">Flexibility to update and grow with your business</li>
@@ -95,9 +95,9 @@
                     In an age where users access websites from a variety of devices, ensuring your site looks and functions beautifully on all screen sizes is essential. We meticulously test your website for responsiveness across different devices, from smartphones to tablets and desktops, guaranteeing a consistent and engaging user experience.
                 </p>
               </div>
-              <div class="fadeup delay1 bg-gray-50 rounded-lg shadow-sm p-4">
+              <div class="fadeup delay1 bg-gray-50 rounded-lg shadow-md p-4">
                 <h2 class=" text-xl font-bold py-4 lg:text-2xl 2xl:text-3xl">Why it Matters</h2>
-                    <ul class="text-gray-600 marker:text-gray-900 list-disc ml-4 space-y-2 text-base lg:text-lg 2xl:text-xl">
+                    <ul class="text-gray-600 marker:text-gray-900 list-disc ml-6 space-y-2 text-base lg:text-lg 2xl:text-xl">
                         <li>Consistent look and feel across all devices</li>
                         <li>Increased accessibility and user satisfaction</li>
                         <li>Better engagement and lower bounce rates</li>
@@ -106,7 +106,7 @@
                </div>
         </div>
 
-        <div class="py-12 grid grid-cols-1 2xl:grid-cols-3 md:gap-12 md:px-24 2xl:px-6">
+        <div class="py-12 grid grid-cols-1 2xl:grid-cols-3 md:gap-12 md:px-24 2xl:px-0">
             <div>
                 <h2 class="fadeup text-2xl md:text-center 2xl:text-left font-bold py-4 lg:text-3xl 2xl:text-4xl">
                     Basic SEO Optimization
@@ -116,9 +116,9 @@
                     Maximize your online presence with our basic SEO services. We provide essential optimization techniques that help your website rank better in search engines, driving more organic traffic to your site. Our approach is straightforward and effective, designed to give your business the visibility it needs without unnecessary complexity.
                 </p>
               </div>
-              <div class="fadeup delay1 bg-gray-50 rounded-lg shadow-sm p-4">
+              <div class="fadeup delay1 bg-gray-50 rounded-lg shadow-md p-4">
                 <h2 class=" text-xl font-bold py-4 lg:text-2xl 2xl:text-3xl">What's Included</h2>
-                    <ul class="text-gray-600 marker:text-gray-900 list-disc ml-4 space-y-2 text-base lg:text-lg 2xl:text-xl">
+                    <ul class="text-gray-600 marker:text-gray-900 list-disc ml-6 space-y-2 text-base lg:text-lg 2xl:text-xl">
                         <li>Essential keyword research and integration</li>
                         <li>On-page SEO optimization (titles, meta descriptions, etc.)</li>
                         <li>Basic performance tracking and adjustments</li>
@@ -126,7 +126,7 @@
                     </ul>
                </div>
                <div class="mt-8 2xl:mt-0">
-                    <img class="fadeup delay2 size-72 md:size-80 2xl:size-96 mx-auto drop-shadow-sm" src="assets/laptop-person.svg" alt="">
+                    <img class="fadeup delay2 size-72 md:size-80 2xl:size-96 mx-auto drop-shadow-md" src="assets/laptop-person.svg" alt="">
                </div>
         </div>
 
@@ -140,9 +140,9 @@
                     Your website needs regular care to stay updated, secure, and functioning smoothly. Our website maintenance services are designed to keep your site in peak condition with minimal hassle. Whether it’s performing routine updates, fixing bugs, or making minor content adjustments, we handle it all so you can focus on your business.
                 </p>
               </div>
-              <div class="fadeup delay1 bg-gray-50 rounded-lg shadow-sm p-4">
+              <div class="fadeup delay1 bg-gray-50 rounded-lg shadow-md p-4">
                 <h2 class="text-xl font-bold py-4 lg:text-2xl 2xl:text-3xl">Maintenance services include:</h2>
-                    <ul class="text-gray-600 marker:text-gray-900 list-disc ml-4 space-y-2 text-base lg:text-lg 2xl:text-xl">
+                    <ul class="text-gray-600 marker:text-gray-900 list-disc ml-6 space-y-2 text-base lg:text-lg 2xl:text-xl">
                         <li>Regular software updates and backups</li>
                         <li>Security checks and vulnerability patching</li>
                         <li>Performance monitoring and optimization</li>
@@ -172,25 +172,25 @@
               <div class="flex transition-transform duration-500 ease-in-out"
                   :style="{ transform: `translateX(-${currentSlide * 100}%)` }">
                   <!-- Service 1 -->
-                  <div class="w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                  <div class="w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                       <img class="size-32 mx-auto py-2" src="assets/collaboration.svg" alt="image">
                       <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Consultation & Planning</h3>
                       <p class="text-center text-gray-600 lg:text-lg">We start by understanding your vision, goals, and target audience. Together, we choose the right hosting plan and domain name that best suits your business needs.</p>
                   </div>
                   <!-- Service 2 --> 
-                  <div class="w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                  <div class="w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                       <img class="size-32 mx-auto py-2" src="assets/design.svg" alt="image">
                       <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Custom Design & Development</h3>
                       <p class="text-center text-gray-600 lg:text-lg">Every website we create is hand-built from the ground up. We focus on crafting a unique design that aligns with your brand, ensuring that the user experience is both intuitive and engaging.</p>
                   </div>
                   <!-- Service 3 -->
-                    <div class="w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                    <div class="w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                     <img class="size-32 mx-auto py-2" src="assets/testing.svg" alt="image">  
                       <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Responsive & Security Testing</h3>
                       <p class="text-center text-gray-600 lg:text-lg">Before launch, we rigorously test your website on various devices and browsers to ensure it’s fully responsive. We also implement essential security measures to protect your site and data.</p>
                   </div>
                   <!-- Service 4 -->
-                  <div class="w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                  <div class="w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                       <img class="size-32 mx-auto py-2" src="assets/launch.svg" alt="image">
                       <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Launch & Support</h3>
                       <p class="text-center text-gray-600 lg:text-lg">Once everything is perfect, we launch your website and provide ongoing support. We’re here to help with any future updates, maintenance, or additional features you might need.</p>
@@ -212,25 +212,25 @@
   
           <div class="hidden 2xl:grid grid-cols-4 gap-6">
                 <!-- Service 1 -->
-                <div class="fadeup w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                <div class="fadeup w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                     <img class="size-32 mx-auto py-2" src="assets/collaboration.svg" alt="image">
                     <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Consultation & Planning</h3>
                     <p class="text-center text-gray-600 lg:text-lg">We start by understanding your vision, goals, and target audience. Together, we choose the right hosting plan and domain name that best suits your business needs.</p>
                 </div>
                 <!-- Service 2 --> 
-                <div class="fadeup delay1 w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                <div class="fadeup delay1 w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                     <img class="size-32 mx-auto py-2" src="assets/design.svg" alt="image">
                     <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Custom Design & Development</h3>
                     <p class="text-center text-gray-600 lg:text-lg">Every website we create is hand-built from the ground up. We focus on crafting a unique design that aligns with your brand, ensuring that the user experience is both intuitive and engaging.</p>
                 </div>
                 <!-- Service 3 -->
-                  <div class="fadeup delay2 w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                  <div class="fadeup delay2 w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                   <img class="size-32 mx-auto py-2" src="assets/testing.svg" alt="image">  
                     <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Responsive & Security Testing</h3>
                     <p class="text-center text-gray-600 lg:text-lg">Before launch, we rigorously test your website on various devices and browsers to ensure it’s fully responsive. We also implement essential security measures to protect your site and data.</p>
                 </div>
                 <!-- Service 4 -->
-                <div class="fadeup delay3 w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                <div class="fadeup delay3 w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                     <img class="size-32 mx-auto py-2" src="assets/launch.svg" alt="image">
                     <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Launch & Support</h3>
                     <p class="text-center text-gray-600 lg:text-lg">Once everything is perfect, we launch your website and provide ongoing support. We’re here to help with any future updates, maintenance, or additional features you might need.</p>
