--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl fadeup">Build Your Digital Dream with Simon Sites</h1>
                   <p class="mt-6 text-lg leading-8 text-gray-600 fadeup delay1">Custom web development tailored to your vision, delivering seamless and responsive experiences that captivate your audience and drive results. Let us bring your ideas to life with precision and creativity.</p>
                   <div class="mt-10 flex items-center justify-center gap-x-6">
-                    <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Contact</a>
+                    <a href="contact.html" class="rounded-md bg-[#135981] px-3.5 py-2.5 text-sm font-semibold text-white shadow-md hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 fadeup delay2">Contact</a>
                     <a href="about.html" class="text-sm font-semibold leading-6 text-gray-900 fadeup delay3">Learn more <span aria-hidden="true">→</span></a>
                   </div>
                 </div>
@@ -79,7 +79,7 @@
               </p>
             </div>
             <div class="md:flex md:justify-end">
-              <img class="fadeup delay1 w-full md:w-8/12 max-w-xl mx-auto md:mx-0 drop-shadow-sm" src="assets/laptop-person.svg" alt="laptop-person">
+              <img class="fadeup delay1 w-full md:w-8/12 max-w-xl mx-auto md:mx-0 drop-shadow-md" src="assets/laptop-person.svg" alt="laptop-person">
             </div>
             
         </div>
@@ -105,25 +105,25 @@
             <div class="flex transition-transform duration-500 ease-in-out"
                 :style="{ transform: `translateX(-${currentSlide * 100}%)` }">
                 <!-- Service 1 -->
-                <div class="w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                <div class="w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                     <img class="size-32 mx-auto py-2" src="assets/code.svg" alt="image">
                     <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Custom Website Development</h3>
                     <p class="text-center text-gray-600 lg:text-lg">From concept to launch, we build websites that are fully customized to your business needs.</p>
                 </div>
                 <!-- Service 2 --> 
-                <div class="w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                <div class="w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                     <img class="size-32 mx-auto py-2" src="assets/mobile.svg" alt="image">
                     <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Responsive Design</h3>
                     <p class="text-center text-gray-600 lg:text-lg">Ensuring your website looks great and functions perfectly on any device.</p>
                 </div>
                 <!-- Service 3 -->
-                  <div class="w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                  <div class="w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                   <img class="size-32 mx-auto py-2" src="assets/seo.svg" alt="image">  
                     <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">SEO Optimization</h3>
                     <p class="text-center text-gray-600 lg:text-lg">Improving your site’s visibility on search engines to attract more visitors.</p>
                 </div>
                 <!-- Service 4 -->
-                <div class="w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                <div class="w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                     <img class="size-32 mx-auto py-2" src="assets/gears.svg" alt="image">
                     <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Website Maintenance</h3>
                     <p class="text-center text-gray-600 lg:text-lg">Ongoing support to keep your site updated, secure, and running smoothly.</p>
@@ -145,25 +145,25 @@
 
         <div class="hidden 2xl:grid grid-cols-4 gap-6">
               <!-- Service 1 -->
-              <div class="fadeup w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+              <div class="fadeup w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                   <img class="size-32 mx-auto py-2" src="assets/code.svg" alt="image">
                   <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Custom Website Development</h3>
                   <p class="text-center text-gray-600 lg:text-lg">From concept to launch, we build websites that are fully customized to your business needs.</p>
               </div>
               <!-- Service 2 --> 
-              <div class="fadeup delay1 w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+              <div class="fadeup delay1 w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                   <img class="size-32 mx-auto py-2" src="assets/mobile.svg" alt="image">
                   <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Responsive Design</h3>
                   <p class="text-center text-gray-600 lg:text-lg">Ensuring your website looks great and functions perfectly on any device.</p>
               </div>
               <!-- Service 3 -->
-                <div class="fadeup delay2 w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+                <div class="fadeup delay2 w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                 <img class="size-32 mx-auto py-2" src="assets/seo.svg" alt="image">  
                   <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">SEO Optimization</h3>
                   <p class="text-center text-gray-600 lg:text-lg">Improving your site’s visibility on search engines to attract more visitors.</p>
               </div>
               <!-- Service 4 -->
-              <div class="fadeup delay3 w-full flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+              <div class="fadeup delay3 w-full flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
                   <img class="size-32 mx-auto py-2" src="assets/gears.svg" alt="image">
                   <h3 class="text-xl font-semibold text-center mb-2 lg:text-2xl">Website Maintenance</h3>
                   <p class="text-center text-gray-600 lg:text-lg">Ongoing support to keep your site updated, secure, and running smoothly.</p>
@@ -181,7 +181,7 @@
         
         <div class="grid gap-12 mt-8 2xl:grid-cols-3">
           <!--Review 1-->
-          <div class="fadeup delay1 w-full max-w-lg flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+          <div class="fadeup delay1 w-full max-w-lg flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
             <h3 class="text-xl text-center font-bold mb-3">Beautiful Site</h3>
             <p class="text-center text-gray-900 lg:text-lg"><b>"</b>SimonSites exceeded our expectations with their attention to detail and commitment to delivering a website that truly represents our brand.<b>"</b></p>
             <div class="flex justify-between items-center px-2 mt-4">
@@ -190,7 +190,7 @@
             </div>
           </div>
           <!--Review 2-->
-          <div class="fadeup w-full max-w-lg flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+          <div class="fadeup w-full max-w-lg flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
             <h3 class="text-xl text-center font-bold mb-3">Excellent Service</h3>
             <p class="text-center text-gray-900 lg:text-lg"><b>"</b>Their professionalism and expertise made the entire process smooth and stress-free. We couldn’t be happier with the results.<b>"</b></p>
             <div class="flex justify-between items-center px-2 mt-4">
@@ -199,7 +199,7 @@
             </div>
           </div>
           <!--Review 2-->
-          <div class="fadeup  delay1 w-full max-w-lg flex-shrink-0 p-4 shadow-sm bg-gray-50 rounded-lg xl:py-12">
+          <div class="fadeup  delay1 w-full max-w-lg flex-shrink-0 p-4 shadow-md bg-gray-50 rounded-lg xl:py-12">
             <h3 class="text-xl text-center font-bold mb-3">Customised Website</h3>
             <p class="text-center text-gray-900 lg:text-lg"><b>"</b>SimonSites delivered a website perfectly tailored to my brand. The level of customization they provided was outstanding. Highly recommend!<b>"</b></p>
             <div class="flex justify-between items-center px-2 mt-4">
