--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles/app.css">
     <title>Contact - Simon Sites</title>
     <link rel="stylesheet" href="styles/nav.css">
     <script src="scripts/nav.js"></script>
@@ -12,7 +12,14 @@
 
     <link rel="stylesheet" href="styles/scrollanims.css">
     <script src="scripts/scrollanims.js" defer></script>
-
+    <meta name="title" content="Simon Sites">
+    <meta name="description" content="Simon Sites provides affordable, custom website development with responsive design, basic SEO, and ongoing maintenance. Contact us today!">
+    <meta name="keywords" content="Web Design, SEO, Website, Cheap Website">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="Simon P">
+    
     <script type="text/javascript">var submitted=false;</script>
     <script>
         function successfunc() {
