--- a/fr/about.html
+++ b/fr/about.html
@@ -55,7 +55,7 @@
                 <div class="text-center">
                   <h1 class="fadeup text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">À propos de SimonSites</h1>
                   <p class="fadeup delay1 mt-6 text-lg leading-8 text-gray-600">Votre partenaire pour l'excellence du développement Web</p>
-                  <a href="contact.html" class=" fadeup delay2 mx-auto mt-4 bg-[#135981] hover:bg-[#38B6FF] w-fit px-3.5 py-2.5 rounded-md text-base font-semibold text-white block">Let's Chat</a>
+                  <a href="contact.html" class=" fadeup delay2 mx-auto mt-4 bg-[#135981] hover:bg-[#38B6FF] w-fit px-3.5 py-2.5 rounded-md text-base font-semibold text-white block">Discutons-en</a>
                 </div>
               </div>
               <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
