--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,15 @@
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {successfunc();}"></iframe>
 
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4024TESCJ5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4024TESCJ5');
+</script>
 <body class="text-gray-900">
 
     <!-- NAV SECTION -->
