--- a/fr/services.html
+++ b/fr/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/app.css">
-    <title>Home - Simon Sites</title>
+    <title>Services - Simon Sites</title>
     <link rel="stylesheet" href="../styles/nav.css">
     <script src="../scripts/nav.js"></script>
     <script src="../scripts/alpine.js" defer></script>
@@ -21,6 +21,15 @@
     <meta name="author" content="Simon P">
     
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4024TESCJ5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4024TESCJ5');
+</script>
 <body class="text-gray-900">
 
     <!-- NAV SECTION -->
