--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <meta name="author" content="Simon P">
     
   </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4024TESCJ5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4024TESCJ5');
+</script>
 <body class="text-gray-900">
 
     <!-- NAV SECTION -->
