--- a/fr/index.html
+++ b/fr/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../styles/scrollanims.css">
     <script src="../scripts/scrollanims.js" defer></script>
     <meta name="title" content="Simon Sites">
-    <meta name="description" content="Simon Sites provides affordable, custom website development with responsive design, basic SEO, and ongoing maintenance. Contact us today!">
+    <meta name="description" content="Simon Sites propose un développement de site web personnalisé et abordable avec un design réactif, un référencement de base et une maintenance continue.">
     <meta name="keywords" content="Web Design, SEO, Website, Cheap Website">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
