--- a/fr/contact.html
+++ b/fr/contact.html
@@ -141,19 +141,19 @@
                     
                     <div class="md:grid md:grid-cols-2 md:gap-4">
                         <div class="flex flex-col">
-                            <label class=" fadeup mb-1 ml-2" for="name">Nom</label>
+                            <label class=" fadeup mt-1 mb-1 ml-2" for="name">Nom</label>
                             <input required class="focus-visible:border-[#135981] outline-none fadeup border-gray-900 border-2 focus-visible:rounded-lg rounded-lg p-1.5" name="entry.873983918" id="name" type="text">
                         </div>
                         <div class="flex flex-col">
-                            <label class="mb-1 ml-2 fadeup " for="email">Courriel</label>
+                            <label class="mt-1 mb-1 ml-2 fadeup " for="email">Courriel</label>
                             <input required class="focus-visible:border-[#135981] outline-none fadeup border-gray-900 border-2 focus-visible:rounded-lg rounded-lg p-1.5" name="entry.1668327303" id="email" type="email">
                         </div>
                     </div>
                     <div class="flex flex-col">
-                        <label class="mb-1 ml-2 fadeup " for="message">Message</label>
+                        <label class="mt-1 mb-1 ml-2 fadeup " for="message">Message</label>
                         <textarea required minlength="5" maxlength="5000" class="focus-visible:border-[#135981] outline-none fadeup border-gray-900 border-2 focus-visible:rounded-lg rounded-lg p-1.5" name="entry.813660717" id="message" type="text"></textarea>
                     </div>
-                    <button type="submit" class="cursor-pointer fadeup mt-5 mx-auto bg-[#135981] hover:bg-[#38B6FF] w-fit px-3.5 py-2.5 rounded-md text-md font-semibold text-white block">Email Us</button>
+                    <button type="submit" class="cursor-pointer fadeup mt-5 mx-auto bg-[#135981] hover:bg-[#38B6FF] w-fit px-3.5 py-2.5 rounded-md text-md font-semibold text-white block">Envoyer</button>
                 </div>
                 <div id="succes-mess" class="hidden">
                     <h2 class=" text-2xl text-center font-bold py-4 lg:text-3xl 2xl:text-4xl">Succès!</h2>
