Refined The Cookie Consent

--- a/contact.html
+++ b/contact.html
@@ -178,15 +178,15 @@
         </div>
       </div>
     </footer>
-    <div id="cookie-banner" class="fixed bottom-0">
-      <div class="bg-white p-4 flex flex-col gap-4 border-t fadeup delay4">
+    <div id="cookie-banner" class="fixed w-full bottom-0">
+      <div class="bg-white p-4 flex flex-col lg:flex-row lg:justify-between gap-4 w-full border-t fadeup delay4">
         <div class="flex flex-col gap-2">
           <span class="text-lg font-bold">We Value Your Privacy</span>
           <span>This site uses cookies to improve your experience. Do you accept?</span>
         </div>
         <div class="flex justify-between gap-5">
-          <button id="reject-cookies" class="rounded-md border-[#135981] border-2 px-5 py-2.5 w-full text-base font-semibold text-[#135981] hover:border-[#38B6FF] hover:text-[#38B6FF]">Reject</button>
-          <button id="accept-cookies" class="rounded-md bg-[#135981] border-[#135981] px-5 w-full border-2 py-2.5 text-base font-semibold text-white shadow-md hover:border-[#38B6FF] hover:bg-[#38B6FF]">Accept</button>
+          <button id="reject-cookies" class="rounded-md border-[#135981] border-2 px-5 py-2.5 w-full lg:min-w-44 text-base font-semibold text-[#135981] hover:border-[#38B6FF] hover:text-[#38B6FF]">Reject</button>
+          <button id="accept-cookies" class="rounded-md bg-[#135981] border-[#135981] px-5 w-full lg:min-w-44 border-2 py-2.5 text-base font-semibold text-white shadow-md hover:border-[#38B6FF] hover:bg-[#38B6FF]">Accept</button>
         </div>
       </div>
     </div>
