--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="author" content="Simon P">
-
-    <script src="https://cdn.tailwindcss.com"></script>
     
   </head>
 <body class="text-gray-900">
@@ -188,14 +186,14 @@
         <div class="mx-auto max-w-7xl px-6 lg:px-8">
           <div class="mx-auto max-w-2xl sm:text-center">
             <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Simple, Affordable Pricing</h2>
-            <p class="mt-6 text-lg leading-8 text-gray-600">We offer multiple plans to fit your needs.</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600">We offer multiple packages to fit your needs.</p>
           </div>
           <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
             <div class="p-8 sm:p-10 lg:flex-auto">
-              <h3 class="text-2xl font-bold tracking-tight text-gray-900">Standard Plan</h3>
+              <h3 class="text-2xl font-bold tracking-tight text-gray-900">Standard Site</h3>
               <p class="mt-6 text-base leading-7 text-gray-600">Perfect for small businesses and individuals who need a professional online presence.</p>
               <div class="mt-10 flex items-center gap-x-4">
-                <h4 class="flex-none text-sm font-semibold leading-6 text-[#38B6FF]">What’s included</h4>
+                <h4 class="flex-none text-sm font-semibold leading-6 text-[#135981]">What’s included</h4>
                 <div class="h-px flex-auto bg-gray-100"></div>
               </div>
               <ul role="list" class="mt-8 grid grid-cols-1 gap-4 text-sm leading-6 text-gray-600 sm:grid-cols-2 sm:gap-6">
@@ -261,10 +259,10 @@
 
           <div class="mx-auto mt-16 max-w-2xl rounded-lg shadow-md sm:mt-20 lg:mx-0 lg:flex lg:max-w-none">
             <div class="p-8 sm:p-10 lg:flex-auto">
-              <h3 class="text-2xl font-bold tracking-tight text-gray-900">Premium Plan</h3>
-              <p class="mt-6 text-base leading-7 text-gray-600">Perfect for small businesses and individuals who need a professional online presence.</p>
+              <h3 class="text-2xl font-bold tracking-tight text-gray-900">Premium Site</h3>
+              <p class="mt-6 text-base leading-7 text-gray-600">Ideal for businesses looking for advanced features and more customization.</p>
               <div class="mt-10 flex items-center gap-x-4">
-                <h4 class="flex-none text-sm font-semibold leading-6 text-[#38B6FF]">What’s included</h4>
+                <h4 class="flex-none text-sm font-semibold leading-6 text-[#135981]">What’s included</h4>
                 <div class="h-px flex-auto bg-gray-100"></div>
               </div>
               <ul role="list" class="mt-8 grid grid-cols-1 gap-4 text-sm leading-6 text-gray-600 sm:grid-cols-2 sm:gap-6">
@@ -272,25 +270,25 @@
                   <svg class="h-6 w-5 flex-none text-[#38B6FF]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Mulitple Pages (up to 5 pages)
+                  Many Pages (over 5 pages)
                 </li>
                 <li class="flex gap-x-3">
                   <svg class="h-6 w-5 flex-none text-[#38B6FF]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Fully custom design
+                  Fully custom design and functionality
                 </li>
                 <li class="flex gap-x-3">
                   <svg class="h-6 w-5 flex-none text-[#38B6FF]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Responsive for all devices
+                  Fully responsive for all devices
                 </li>
                 <li class="flex gap-x-3">
                   <svg class="h-6 w-5 flex-none text-[#38B6FF]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Basic SEO setup
+                  Detailed SEO setup
                 </li>
                 <li class="flex gap-x-3">
                   <svg class="h-6 w-5 flex-none text-[#38B6FF]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -302,7 +300,7 @@
                   <svg class="h-6 w-5 flex-none text-[#38B6FF]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M16.704 4.153a.75.75 0 01.143 1.052l-8 10.5a.75.75 0 01-1.127.075l-4.5-4.5a.75.75 0 011.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 011.05-.143z" clip-rule="evenodd" />
                   </svg>
-                  Basic security features
+                  Comprehensive security features
                 </li>
                 <li class="flex gap-x-3">
                   <svg class="h-6 w-5 flex-none text-[#38B6FF]" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -318,7 +316,7 @@
                 <div class="mx-auto max-w-xs px-8">
                   <p class="text-base font-semibold text-gray-600">Starting At</p>
                   <p class="mt-6 flex items-baseline justify-center gap-x-2">
-                    <span class="text-5xl font-bold tracking-tight text-gray-900">$75</span>
+                    <span class="text-5xl font-bold tracking-tight text-gray-900">$150</span>
                     <span class="text-sm font-semibold leading-6 tracking-wide text-gray-600">CAD</span>
                   </p>
                   <a href="contact.html" class="mt-10 block w-full rounded-md bg-[#135981] px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-[#38B6FF] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get Started</a>
